Сделал рабочий вариант

--- a/bb.ipynb
+++ b/bb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -27,10 +27,11 @@
        " 'name=\"5.2.7',\n",
        " 'name=\"5.2.8',\n",
        " 'name=\"5.2.9',\n",
-       " 'name=\"5.2.10']"
+       " 'name=\"5.2.10',\n",
+       " 'name=\"5.4.2']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +45,281 @@
     "for i in range(10):\n",
     "    massiv.append(f'name=\"5.2.{i+1}')\n",
     "\n",
+    "massiv.append('name=\"5.4.2')\n",
+    "\n",
     "massiv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 3), match='5.2'>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "pattern = r\"((\\d{1,2})\\.?(\\d{1,2})?\\.?(\\d{1,2})?)\"\n",
+    "\n",
+    "input_string = \"5.2\"\n",
+    "\n",
+    "test_match = re.search(pattern, input_string)\n",
+    "\n",
+    "if test_match is None:\n",
+    "    raise Exception(\"кал\")\n",
+    "test_match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['name=\"4.1',\n",
+       " 'name=\"4.2',\n",
+       " 'name=\"4.3',\n",
+       " 'name=\"4.4',\n",
+       " 'name=\"4.5',\n",
+       " 'name=\"4.6',\n",
+       " 'name=\"4.7',\n",
+       " 'name=\"4.8',\n",
+       " 'name=\"4.9',\n",
+       " 'name=\"4.10',\n",
+       " 'name=\"5.3.1',\n",
+       " 'name=\"5.3.2',\n",
+       " 'name=\"5.3.3',\n",
+       " 'name=\"5.3.4',\n",
+       " 'name=\"5.3.5',\n",
+       " 'name=\"5.3.6',\n",
+       " 'name=\"5.3.7',\n",
+       " 'name=\"5.3.8',\n",
+       " 'name=\"5.3.9',\n",
+       " 'name=\"5.3.10',\n",
+       " 'name=\"5.5.2']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def choose_pattern(template: re.Match) -> str:\n",
+    "    first_number: str = template.group(2)\n",
+    "    second_number: str = template.group(3)\n",
+    "    last_number: str = template.group(4)\n",
+    "\n",
+    "    if last_number:\n",
+    "        return r\"(\" + first_number + r\"\\.\" + second_number + r\"\\.?(\\d{1,2})?)\"\n",
+    "    elif second_number:\n",
+    "        return r\"[^\\.](\" + first_number + r\"\\.?(\\d{1,2})?)\"\n",
+    "    else:\n",
+    "        return r\"[^\\.]((\" + first_number + r\")\\.)\"\n",
+    "\n",
+    "\n",
+    "def choose_replacment_str(template: re.Match, match: re.Match) -> str:\n",
+    "    first_number: str = template.group(2)\n",
+    "    second_number: str = template.group(3)\n",
+    "    last_number: str = template.group(4)\n",
+    "\n",
+    "    if last_number:\n",
+    "        return f'name=\"{first_number}.{second_number}.{int(match.group(2)) + 1}'\n",
+    "    elif second_number:\n",
+    "        return f'name=\"{first_number}.{int(match.group(2)) + 1}'\n",
+    "    else:\n",
+    "        return f'name=\"{int(match.group(2)) + 1}.'\n",
+    "\n",
+    "\n",
+    "def retry_or_continue(template: re.Match, match: re.Match) -> bool:\n",
+    "    first_number: str = template.group(2)\n",
+    "    second_number: str = template.group(3)\n",
+    "    last_number: str = template.group(4)\n",
+    "\n",
+    "    if last_number and int(last_number) > int(match.group(2)):\n",
+    "        return True\n",
+    "    elif second_number and int(second_number) > int(match.group(2)):\n",
+    "        return True\n",
+    "    elif (\n",
+    "        not last_number\n",
+    "        and not second_number\n",
+    "        and int(first_number) < int(match.group(2))\n",
+    "    ):\n",
+    "        return True\n",
+    "\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "def incriment_strings(sorted_string: list[str], template: re.Match) -> None:\n",
+    "    pattern: str = choose_pattern(template)\n",
+    "\n",
+    "    for i in range(len(sorted_string)):\n",
+    "        match: re.Match | None = re.search(pattern, sorted_string[i])\n",
+    "        if match is None:\n",
+    "            continue\n",
+    "        if retry_or_continue(template, match):\n",
+    "            continue\n",
+    "\n",
+    "        replacment_str: str = choose_replacment_str(template, match)\n",
+    "\n",
+    "        sorted_string[i] = sorted_string[i].replace(\n",
+    "            f'name=\"{match.group(1)}',\n",
+    "            replacment_str,\n",
+    "        )\n",
+    "\n",
+    "incriment_strings(massiv, test_match)\n",
+    "massiv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['name=\"4.1',\n",
+       " 'name=\"4.2',\n",
+       " 'name=\"4.3',\n",
+       " 'name=\"4.4',\n",
+       " 'name=\"4.5',\n",
+       " 'name=\"4.6',\n",
+       " 'name=\"4.7',\n",
+       " 'name=\"4.8',\n",
+       " 'name=\"4.9',\n",
+       " 'name=\"4.10',\n",
+       " 'name=\"5.3.1',\n",
+       " 'name=\"5.3.2',\n",
+       " 'name=\"5.3.3',\n",
+       " 'name=\"5.3.4',\n",
+       " 'name=\"5.3.5',\n",
+       " 'name=\"5.3.6',\n",
+       " 'name=\"5.3.7',\n",
+       " 'name=\"5.3.8',\n",
+       " 'name=\"5.3.9',\n",
+       " 'name=\"5.3.10',\n",
+       " 'name=\"5.5.2']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "\n",
+    "def choose_pattern(template: re.Match) -> str:\n",
+    "    first_number: str = template.group(2)\n",
+    "    second_number: str = template.group(3)\n",
+    "    last_number: str = template.group(4)\n",
+    "\n",
+    "    if last_number:\n",
+    "        return r\"name=\\\"(\" + first_number + r\"\\.\" + second_number + r\"\\.?(\\d{1,2})?)\"\n",
+    "    elif second_number:\n",
+    "        return r\"name=\\\"(\" + first_number + r\"\\.?(\\d{1,2})?)\"\n",
+    "    else:\n",
+    "        return r\"name=\\\"((\" + first_number + r\")\\.)\"\n",
+    "\n",
+    "\n",
+    "def choose_replacment_str(template: re.Match, match: re.Match) -> str:\n",
+    "    first_number: str = template.group(2)\n",
+    "    second_number: str = template.group(3)\n",
+    "    last_number: str = template.group(4)\n",
+    "\n",
+    "    if last_number:\n",
+    "        return f'name=\"{first_number}.{second_number}.{int(match.group(2)) + 1}'\n",
+    "    elif second_number:\n",
+    "        return f'name=\"{first_number}.{int(match.group(2)) + 1}'\n",
+    "    else:\n",
+    "        return f'name=\"{int(match.group(2)) + 1}.'\n",
+    "\n",
+    "\n",
+    "def retry_or_continue(template: re.Match, match: re.Match) -> bool:\n",
+    "    first_number: str = template.group(2)\n",
+    "    second_number: str = template.group(3)\n",
+    "    last_number: str = template.group(4)\n",
+    "\n",
+    "    if last_number and int(last_number) > int(match.group(2)):\n",
+    "        return True\n",
+    "    elif second_number and int(second_number) > int(match.group(2)):\n",
+    "        return True\n",
+    "    elif (\n",
+    "        not last_number\n",
+    "        and not second_number\n",
+    "        and int(first_number) < int(match.group(2))\n",
+    "    ):\n",
+    "        return True\n",
+    "\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "def incriment_strings(sorted_string: list[str], template: re.Match) -> None:\n",
+    "    pattern: str = choose_pattern(template)\n",
+    "\n",
+    "    for i in range(len(sorted_string)):\n",
+    "        match: re.Match | None = re.search(pattern, sorted_string[i])\n",
+    "        if match is None:\n",
+    "            continue\n",
+    "        if retry_or_continue(template, match):\n",
+    "            continue\n",
+    "\n",
+    "        replacment_str: str = choose_replacment_str(template, match)\n",
+    "\n",
+    "        sorted_string[i] = sorted_string[i].replace(\n",
+    "            f'name=\"{match.group(1)}',\n",
+    "            replacment_str,\n",
+    "        )\n",
+    "\n",
+    "incriment_strings(massiv, test_match) # type: ignore\n",
+    "massiv\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name=\"4.1\n",
+      "name=\"4.2\n",
+      "name=\"4.3\n",
+      "name=\"4.4\n",
+      "name=\"4.5\n",
+      "name=\"4.6\n",
+      "name=\"4.7\n",
+      "name=\"4.8\n",
+      "name=\"4.9\n",
+      "name=\"4.10\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "pattern = r\"name=\\\"((\" + \"4\" + r\")\\.)\"\n",
+    "\n",
+    "for i, el in enumerate(massiv):\n",
+    "    match = re.search(pattern, el)\n",
+    "    if match:\n",
+    "        print(match.string)\n",
+    "\n"
    ]
   },
   {
